# shift

./: .gitignore  Cargo.toml  Justfile  PLAN.md  README.md  default.nix
profiler/: Cargo.toml
profiler/src/: lib.rs
shift/: Cargo.toml  build.rs  token
shift/src/: app.rs  dma_buf_importer.rs  egl.rs  error.rs  input.rs  macros.rs  main.rs  output.rs  presenter.rs  renderer.rs
shift/src/animations/: blur.rs
shift/src/client_layer/: client.rs  client_view.rs
shift/src/comms/: client2server.rs  mod.rs  render2server.rs  server2client.rs  server2render.rs
shift/src/opengl/: binding.rs  buffer.rs  buffer_group.rs  mod.rs  shader.rs  texture.rs
shift/src/rendering_layer/: channels.rs  dmabuf_import.rs  mod.rs
shift/src/server_layer/: server.rs
tab/: v1.md  v2.md
tab-client/: Cargo.toml  README.md  build.rs
tab-client/cmake/: FindTabClient.cmake
tab-client/examples/: admin_client.rs  dvd_rust.rs
tab-client/examples/cmake-demo/: CMakeLists.txt  main.cpp  run.sh
tab-client/examples/dvd-client-cpp/: CMakeLists.txt  logs.txt  main.cpp  run.sh
tab-client/examples/session-client/: CMakeLists.txt  main.cpp  run.sh
tab-client/include/: tab_client.h
tab-client/src/: c_bindings.rs  config.rs  egl.rs  error.rs  events.rs  gbm_allocator.rs  gl.rs  lib.rs  monitor.rs  swapchain.rs
tab-client/src/c_bindings/: event.rs  input.rs
tab-protocol/: Cargo.toml
tab-protocol/src/: error.rs  lib.rs  message_frame.rs  message_header.rs  unix_socket_utils.rs
tab-server/: Cargo.toml
tab-server/src/: client.rs  connection.rs  id.rs  lib.rs  monitor.rs  server.rs  session.rs
