[workspace]
resolver = "2"
members = [
    "shift",
    "tab-protocol",
    "tab-client",
]

[workspace.package]
edition = "2024"
version = "0.1.0-alpha"

[workspace.dependencies]
nix = { version = "0.29", default-features = false, features = ["socket", "uio"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-tracy = "0.11"
# easydrm = {path="../easydrm"}
easydrm = {git = "https://github.com/everything-os/easydrm", branch="main"}
tokio = {version="1.49.0", features=["macros", "net", "rt-multi-thread", "time", "sync"]}
[profile.release-with-debug]
inherits = "release"
debug = true
