[package]
name = "shift"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
easydrm = { workspace = true }
tokio.workspace = true
tab-protocol = { path = "../tab-protocol" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tracy = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
libc = "0.2"
input = "0.9.1"
linux-raw-sys = { version = "0.12.0", default-features = false, features = ["ioctl"] }
rand = "0.9.2"
paste = "1.0.15"
base64.workspace = true
getrandom = { version = "0.3.4", features = ["std"] }
subtle = "2.6.1"
chrono = "0.4.43"
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
skia-safe = { version = "0.91.1", features = ["gl"] }

[build-dependencies]
gl_generator = "0.14"
