[package]
name = "tab-client"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "tab_client"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
libc = "0.2"
tab-protocol = { path = "../tab-protocol" }
thiserror = { workspace = true }
serde_json = { workspace = true }
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
libloading = "0.8.9"
nix = { workspace = true, features = ["poll", "fs"] }
gbm = { version = "0.18", default-features = false, features = ["import-egl"] }

[dev-dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
image = { version = "0.24", default-features = false, features = ["png"] }

[build-dependencies]
gl_generator = "0.14"
