[package]
name = "tab-client"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "tab_client"
crate-type = ["rlib", "staticlib"]

[dependencies]
libc = "0.2"
tab-protocol = { path = "../tab-protocol" }
thiserror = { workspace = true }
serde_json = { workspace = true }
libloading = "0.8.9"
nix = { workspace = true, features = ["poll", "fs"] }
gbm = { version = "0.18", default-features = false, features = ["import-egl"] }
shift-profiler = { workspace = true }

[dev-dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
image = { version = "0.24", default-features = false, features = ["png"] }
