[package]
name = "tab-protocol"
version = "1.0.0"
edition = { workspace = true }

[lib]
name = "tab_protocol"

[dependencies]
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
const-str = "0.5"
tokio = {workspace = true, optional = true}
shift-profiler = { workspace = true }

[features]
default = ["async"]
async = ["dep:tokio"]
