[package]
name = "tab-server"
version = { workspace = true }
edition = { workspace = true }

[features]
default = []
easydrm = ["dep:easydrm"]

[dependencies]
tab-protocol = { path = "../tab-protocol" }
thiserror = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
nix = { workspace = true }
easydrm = { workspace = true, optional = true }
